# RotatingCube

./: README.md  pyproject.toml  requirements.txt
cube_game/: CubeGame.py  CubeGame_cpp.py  __init__.py  compute.py  game.py
