[project]
name = "gameCube-Game"
version = "0.1.0"
description = "Simple Orthogonal Rotation Project"
authors = [
{ name="Alexandru Andrei Szilagyi", email="szilagyial100533@th-nuernberg.de"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["tabulate"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["cube_game"]